# Chatbot-using-OpenAi-Streamlit

./: .gitignore  pyproject.toml
chatbot/: main.py  testing.py  weathertest.py
