[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Abdullah <iamabdullah234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
openai = "^1.51.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
